<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:id="@+id/img_launch_screen"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/img_app_logo_margin"
            android:contentDescription="@string/desc_app_logo"
            android:src="@drawable/ballot_logo"
            app:layout_constraintBottom_toTopOf="@id/upcomingButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/upcomingButton"
            style="@style/MyGenericButtonTheme"
            android:text="@string/btn_title_upcoming_elections"
            app:layout_constraintBottom_toTopOf="@+id/representativeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_launch_screen" />

        <Button
            android:id="@+id/representativeButton"
            style="@style/MyGenericButtonTheme"
            android:text="@string/btn_title_representatives"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upcomingButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>